--- a/_pages/page-archive.html
+++ b/_pages/page-archive.html
@@ -1,9 +1,12 @@
 ---
-layout: archive
-title: "Page Archive"
-permalink: /page-archive/
-author_profile: false
+<!-- layout: archive -->
+title: "Awards & Honors"
+permalink: /awards/
+author_profile: true
 ---
+
+
+
 
 {% include base_path %}
 {% for post in site.pages %}
