--- a/_pages/page-archive.html
+++ b/_pages/page-archive.html
@@ -1,8 +1,8 @@
 ---
-<!-- layout: archive -->
-title: "Awards & Honors"
-permalink: /awards/
-author_profile: true
+layout: archive
+title: "Page Archive"
+permalink: /page-archive/
+author_profile: false
 ---
 
 
